# v33da

./: .gitignore  LICENSE  README.md  pyproject.toml
data/v33da_sample/: README.md  metadata.json  split_summary.json  v33da_sample.parquet
data/v33da_sample/calibrations/: README.md  reference_points.csv
data/v33da_sample/calibrations/juvExpBP01/: calibration_back.npz  calibration_side.npz  calibration_top.npz  camera_pose_back.pkl  camera_pose_side.pkl  camera_pose_top.pkl  coordinates_back.pkl  coordinates_side.pkl  coordinates_top.pkl
data/v33da_sample/calibrations/juvExpBP02/: calibration_back.npz  calibration_side.npz  calibration_top.npz  camera_pose_back.pkl  camera_pose_side.pkl  camera_pose_top.pkl  coordinates_back.pkl  (+2 more)
notebooks/: walkthrough.ipynb
scripts/: build_sample.py  dataset_statistics.py  prepare_v33da_splits.py  train.py  train_loc_first.py  train_srp_reranker.py  train_whisper_candidate.py
v33da/baselines/: gcc_phat.py  music.py  seldnet.py  seldnet_pp.py  seldnet_pp_open.py  seldnet_radio.py  srp_phat.py  utils.py
v33da/configs/: audio_3d.yaml  audio_only.yaml  aves_audio_3d_radio.yaml  base.yaml  whisper_audio_3d_radio.yaml
v33da/evaluation/: metrics.py
v33da/models/: __init__.py  accel_oracle.py  beam_fusion.py  candidate.py  candidate_temporal.py  contrastive.py  decoder.py  literature_seld.py  neural_srp.py  pairrank.py  pose_motion.py  seldnet_plus.py  spatial_scorer.py  video_candidate.py
v33da/models/encoders/: aves.py  melspec.py  whisper.py
v33da/models/spatial/: conformer.py
v33da/training/: losses.py  trainer.py
(+9 files in other folders)
