[project]
name = "v33da"
version = "1.0.0"
description = "V33DA: A Multi-Modal Benchmark for Vocal Attribution in Freely Interacting Zebra Finches"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Maris Basha"},
    {name = "Linus Rüttimann"},
    {name = "Richard H.R. Hahnloser"},
]
dependencies = [
    "h5py>=3.8",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "soundfile>=0.12",
    "torch>=2.0",
    "torchaudio>=2.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "seaborn>=0.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
